syntax = "proto3";

option csharp_namespace = "fileClient";

package fileUD;

import "google/protobuf/wrappers.proto";

service FileUD {
 rpc FileDownload (fileInfo) returns(stream fileDownloadResponse);
}

message  fileInfo {
    string fullName = 1;
}

message fileDownloadResponse{
    int64 fileSize = 1;
    bytes buffer = 2;
    int32 readedData = 3;
}
